<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/diolog_TextView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/gold"
        android:text="@string/title"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:gravity="center">
    </TextView>

    <EditText
        android:id="@+id/diolog_EditTextUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username">
    </EditText>


    <EditText
        android:id="@+id/diolog_EditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/password">
    </EditText>


</LinearLayout>